--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto-carrinho",
+  "name": "carrinho-de-compras-main",
   "private": true,
   "version": "0.0.0",
   "type": "module",
